test: failing test BLI_task_test in master #76005

Closed
opened 2020-04-22 18:05:15 +02:00 by Ray molenkamp · 9 comments
Member

System Information
Operating system: Win64
Graphics card: N/A

Blender Version
Broken: master
Worked: 2.83 release branch or master with D7475

Short description of error

122: Test command: K:\BlenderGit\2019_full_ninja_cached\bin\tests\Release\BLI_task_test.exe
122: Environment variables:
122:  LSAN_OPTIONS=exitcode=0
122: Test timeout computed to be: 10000000
122: [==========] Running 4 tests from 1 test case.
122: [----------] Global test environment set-up.
122: [----------] 4 tests from task
122: [ RUN      ] task.RangeIter
122: [       OK ] task.RangeIter (4 ms)
122: [ RUN      ] task.RangeIterPool
122: K:\BlenderGit\blender\tests\gtests\blenlib\BLI_task_test.cc(105): error:       Expected: sum
122:       Which is: 449955000
122: To be equal to: expected_sum
122:       Which is: 499950000
122: [  FAILED  ] task.RangeIterPool (2 ms)
122: [ RUN      ] task.MempoolIter
122: [       OK ] task.MempoolIter (1 ms)
122: [ RUN      ] task.ListBaseIter
122: [       OK ] task.ListBaseIter (1 ms)
122: [----------] 4 tests from task (8 ms total)
122:
122: [----------] Global test environment tear-down
122: [==========] 4 tests from 1 test case ran. (8 ms total)
122: [  PASSED  ] 3 tests.
122: [  FAILED  ] 1 test, listed below:
122: [  FAILED  ] task.RangeIterPool
122:
122:  1 FAILED TEST
    Test #122: BLI_task_test ....................***Failed    0.02 sec

Exact steps for others to reproduce the error

ctest -C Release-V -V -R BLI_task --repeat-until-fail 1000

debug seems to have an easier time triggering it

**System Information** Operating system: Win64 Graphics card: N/A **Blender Version** Broken: master Worked: 2.83 release branch or master with [D7475](https://archive.blender.org/developer/D7475) **Short description of error** ``` 122: Test command: K:\BlenderGit\2019_full_ninja_cached\bin\tests\Release\BLI_task_test.exe 122: Environment variables: 122: LSAN_OPTIONS=exitcode=0 122: Test timeout computed to be: 10000000 122: [==========] Running 4 tests from 1 test case. 122: [----------] Global test environment set-up. 122: [----------] 4 tests from task 122: [ RUN ] task.RangeIter 122: [ OK ] task.RangeIter (4 ms) 122: [ RUN ] task.RangeIterPool 122: K:\BlenderGit\blender\tests\gtests\blenlib\BLI_task_test.cc(105): error: Expected: sum 122: Which is: 449955000 122: To be equal to: expected_sum 122: Which is: 499950000 122: [ FAILED ] task.RangeIterPool (2 ms) 122: [ RUN ] task.MempoolIter 122: [ OK ] task.MempoolIter (1 ms) 122: [ RUN ] task.ListBaseIter 122: [ OK ] task.ListBaseIter (1 ms) 122: [----------] 4 tests from task (8 ms total) 122: 122: [----------] Global test environment tear-down 122: [==========] 4 tests from 1 test case ran. (8 ms total) 122: [ PASSED ] 3 tests. 122: [ FAILED ] 1 test, listed below: 122: [ FAILED ] task.RangeIterPool 122: 122: 1 FAILED TEST Test #122: BLI_task_test ....................***Failed 0.02 sec ``` **Exact steps for others to reproduce the error** `ctest -C Release-V -V -R BLI_task --repeat-until-fail 1000` debug seems to have an easier time triggering it
Author
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Author
Member

Bisect says de168b4115 is the breaking commit which is kinda weird.....

Bisect says de168b4115 is the breaking commit which is kinda weird.....

This issue was referenced by 8f51f60948

This issue was referenced by 8f51f60948cc56f14da7592f3528ef925babf1cc

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-04-23 14:05:30 +02:00

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Brecht Van Lommel removed their assignment 2020-04-23 14:49:20 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

This is still failing apparently.

This is still failing apparently.

This issue was referenced by 3b47f335c6

This issue was referenced by 3b47f335c6792cb96b2f97cf1f24cdf91e2b59bf

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-04-23 15:40:06 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76005
No description provided.